move phase update to project.html

--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -160,6 +160,17 @@
                                 <div class="header-title">
                                     <h4 class="card-title text-primary fw-bold fs-2">Project Details</h4>
                                 </div>
+                                <div class="">
+                                    <select name="" id="development-phase" class="form-control">
+                                        <option value="PLANNING">PLANNING</option>
+                                        <option value="DESIGN">DESIGN</option>
+                                        <option value="CODING">CODING</option>
+                                        <option value="TESTING">TESTING</option>
+                                        <option value="REVIEW">REVIEW</option>
+                                        <option value="DEPLOYMENT">DEPLOYMENT</option>
+                                        <option value="MAINTENANCE">MAINTENANCE</option>
+                                    </select>
+                                </div>
                             </div>
                             <div class="card-body bg-white " style="overflow-y: auto; max-height: 66vh; min-height: 66vh;">
                                 
