fixed error in add project form

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -499,6 +499,28 @@
                                         </div>
                                     </div>
 
+                                    <div class="col-lg-6">
+                                        <label
+                                            for="systemOutlines"
+                                            class="col-sm-12 col-form-label"
+                                            name="systemOutlines"
+                                            >System Outlines
+                                            <span style="color: red"> *</span>
+                                        </label>
+                                        <div id="systemOutlines"></div>
+                                    </div>
+
+                                    <div class="col-lg-6">
+                                        <label
+                                            for="employee-list"
+                                            class="col-sm-12 col-form-label"
+                                            name="systemOutlines"
+                                            >Choose employee
+                                            <span style="color: red"> *</span>
+                                        </label>
+                                        <div id="employee-list"></div>
+                                    </div>
+
 
                                     <!--                                deliverable add-->
                                     <div class="col-lg-6">
