--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -153,7 +153,7 @@
                                     aria-label=".form-select-lg example" style="font-size: 16px;" required>
                                 <option value="" selected disabled>Select Role</option>
                                 <option value="PROJECT_MANAGER">Project Manager</option>
-                                <option value="EMPLOYEE">Member</option>
+                                <option value="EMPLOYEE">Employee</option>
                                 <option value="FOC">FOC</option>
                                 <option value="CONTRACT">Contract</option>
                             </select>
