--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -338,7 +338,7 @@
                 </nav>
                 <div>
                     <form class="d-inline-block">
-                        <input class="form-control border-0" type="search" placeholder="&#xF002; Search Department"
+                        <input class="form-control border-0" type="search" placeholder="&#xF002; Search"
                                style="font-family:Arial, FontAwesome"/>
                     </form>
                     <!-- sorting button -->
@@ -376,8 +376,8 @@
                                     <div class="profile-card-icon">
                                         <img src="/images/avatars/departmenthead_avatar.svg" class="rounded-circle" style="height: 100px; width: 100px" alt="department head avatar"/>
                                     </div>
-                                    <h4 style="margin-top: 10px">Department Head</h4>
-                                    <h5 id="department-head"></h5>
+                                    <h4 id="department-head" style="margin-top: 10px"></h4>
+                                    <h5>Department Head</h5>
                                 </div>
                             </div>
                             <div class=" pt-3">
