--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -328,7 +328,7 @@
             const tasks = []
 
             $.ajax({
-                url: "api/task/list/user/" + currentUser.currentUser.id,
+                url: "api/task/list/user/" + currentUser.currentUser.id+"/status/TODO",
                 type: "GET",
                 dataType: "json",
                 success: function (data) {
@@ -341,6 +341,7 @@
             })
 
             function buildCalendar(tasks) {
+                console.log("IN BUILD CALENDAR FUNCTION")
                 const calendar = new FullCalendar.Calendar(calendarElement, {
                     initialView: 'dayGridMonth',
                     weekends: false,
@@ -350,97 +351,105 @@
                         right: 'today prev,next'
                     },
                     events: tasks.map((task) => {
+                        // return {
+                        //     title: task.title,
+                        //     extendedProps: {
+                        //         title: task.title,
+                        //         description: task.description,
+                        //         status: task.status,
+                        //         planHours: task.planHours,
+                        //         taskId: task.id,
+                        //     },
+                        //     start: new Date(task.plan_start_time),
+                        //     end: new Date(task.plan_end_time + 86400000),
+                        //     color: task.tasksGroup === 'A' ? "#444cf7" : task.tasksGroup === 'B' ? "#f7c744" : "#f74444",
+                        //     textColor: "white",
+                        //     allDay: true
+                        // }
                         return {
-                            title: task.title,
-                            extendedProps: {
-                                title: task.title,
-                                description: task.description,
-                                status: task.status,
-                                planHours: task.planHours,
-                                taskId: task.id,
-                            },
-                            start: new Date(task.plan_start_time),
-                            end: new Date(task.plan_end_time + 86400000),
-                            color: task.tasksGroup === 'A' ? "#444cf7" : task.tasksGroup === 'B' ? "#f7c744" : "#f74444",
+                            title: "Hi",
+                            start: new Date (),
+                            end: new Date (),
+                            color: "#444cf7",
                             textColor: "white",
                             allDay: true
                         }
                     }),
-                    eventClick: function (info) {
-                        const eventTitle = info.event.title;
-                        const eventStatus = tasks.find((task) => {
-                            return task.title === eventTitle;
-                        }).status;
-                        const eventDescription = tasks.find((task) => {
-                            return task.title === eventTitle;
-                        }).description;
-
-                        const projectName = tasks.find((task) => {
-                            return task.title === eventTitle;
-                        }).projectDto.name;
-
-                        const planHours = tasks.find((task) => {
-                            return task.title === eventTitle;
-                        }).plan_hours;
-
-                        let taskGroup = tasks.find((task) => {
-                            return task.title === eventTitle;
-                        }).tasksGroup;
-
-                        if (taskGroup === 'A') {
-                            taskGroup = "Group A - Related With Project Development"
-                        } else if (taskGroup === 'B') {
-                            taskGroup = "Group B - Training"
-                        } else {
-                            taskGroup = "Group C - Idling"
-                        }
-
-                        //get plan_end_time and convert to date and do some math to show remaining days
-                        const planEndTime = tasks.find((task) => {
-                            return task.title === eventTitle;
-                        }).plan_end_time;
-                        //only show date and month
-                        const planEndTimeDate = new Date(planEndTime).toLocaleDateString('en-US', {
-                            day: 'numeric',
-                            month: 'short',
-                            year: 'numeric'
-                        });
-
-                        // Create a modal element
-                        const modal = document.createElement('div');
-                        modal.classList.add('modal');
-
-                        modal.innerHTML = `
-        <div class="modal-dialog modal-dialog-centered d-flex align-items-center">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">${eventTitle} <span class="badge bg-primary">${eventStatus}</span></h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body row">
-                    <p class="col-6"><strong>Project : </strong> ${projectName}</p>
-                    <p class="col-6"><strong>Description :</strong> ${eventDescription}</p>
-                    <p class="col-6"><strong>Task Group :</strong> ${taskGroup}</p>
-                    <p class="col-6"><strong>Due Date :</strong> ${planEndTimeDate}</p>
-                    <p class="col-6"><strong>Plan Hours :</strong> ${planHours}</p>
-                    <!-- Add more information as needed -->
-                </div>
-            </div>
-        </div>
-    `;
-
-                        // Append the modal to the body
-                        document.body.appendChild(modal);
-
-                        // Show the modal using Bootstrap modal
-                        $(modal).modal('show');
-
-                        // Remove the modal from the DOM when it's closed
-                        $(modal).on('hidden.bs.modal', function () {
-                            $(this).remove();
-                        });
-
-                    },
+    //                 eventClick: function (info) {
+    //                     const eventTitle = info.event.title;
+    //                     const eventStatus = tasks.find((task) => {
+    //                         return task.title === eventTitle;
+    //                     }).status;
+    //                     const eventDescription = tasks.find((task) => {
+    //                         return task.title === eventTitle;
+    //                     }).description;
+    //
+    //                     const projectName = tasks.find((task) => {
+    //                         return task.title === eventTitle;
+    //                     }).projectDto.name;
+    //
+    //                     const planHours = tasks.find((task) => {
+    //                         return task.title === eventTitle;
+    //                     }).plan_hours;
+    //
+    //                     let taskGroup = tasks.find((task) => {
+    //                         return task.title === eventTitle;
+    //                     }).tasksGroup;
+    //
+    //                     if (taskGroup === 'A') {
+    //                         taskGroup = "Group A - Related With Project Development"
+    //                     } else if (taskGroup === 'B') {
+    //                         taskGroup = "Group B - Training"
+    //                     } else {
+    //                         taskGroup = "Group C - Idling"
+    //                     }
+    //
+    //                     //get plan_end_time and convert to date and do some math to show remaining days
+    //                     const planEndTime = tasks.find((task) => {
+    //                         return task.title === eventTitle;
+    //                     }).plan_end_time;
+    //                     //only show date and month
+    //                     const planEndTimeDate = new Date(planEndTime).toLocaleDateString('en-US', {
+    //                         day: 'numeric',
+    //                         month: 'short',
+    //                         year: 'numeric'
+    //                     });
+    //
+    //                     // Create a modal element
+    //                     const modal = document.createElement('div');
+    //                     modal.classList.add('modal');
+    //
+    //                     modal.innerHTML = `
+    //     <div class="modal-dialog modal-dialog-centered d-flex align-items-center">
+    //         <div class="modal-content">
+    //             <div class="modal-header">
+    //                 <h5 class="modal-title">${eventTitle} <span class="badge bg-primary">${eventStatus}</span></h5>
+    //                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    //             </div>
+    //             <div class="modal-body row">
+    //                 <p class="col-6"><strong>Project : </strong> ${projectName}</p>
+    //                 <p class="col-6"><strong>Description :</strong> ${eventDescription}</p>
+    //                 <p class="col-6"><strong>Task Group :</strong> ${taskGroup}</p>
+    //                 <p class="col-6"><strong>Due Date :</strong> ${planEndTimeDate}</p>
+    //                 <p class="col-6"><strong>Plan Hours :</strong> ${planHours}</p>
+    //                 <!-- Add more information as needed -->
+    //             </div>
+    //         </div>
+    //     </div>
+    // `;
+    //
+    //                     // Append the modal to the body
+    //                     document.body.appendChild(modal);
+    //
+    //                     // Show the modal using Bootstrap modal
+    //                     $(modal).modal('show');
+    //
+    //                     // Remove the modal from the DOM when it's closed
+    //                     $(modal).on('hidden.bs.modal', function () {
+    //                         $(this).remove();
+    //                     });
+    //
+    //                 },
                 });
                 calendar.render();
             }
@@ -837,25 +846,33 @@
             function updateKpiChart(selectedValue) {
                 $.ajax({
                     url: `api/dashboard/kpi/project/${selectedValue}`,
-                    method: 'GET',
-                    dataType: 'json',
-                    success: function (data) {
+                    method: "GET",
+                    dataType: "json",
+                    success: function (response) {
 
-                        barChart2.data.datasets.forEach((dataset, index) => {
-                            const label = dataset.label.toLowerCase().replace(" ", "_");
-                            dataset.data.push(data[label]);
+                        const datasetData = [];
+
+                        Object.entries(response).forEach(([key, value]) => {
+                            datasetData.push(value);
                         });
 
-                        // Update the chart options
-                        barChart2.options.scales.y.min = 0;
-                        barChart2.options.scales.y.max = 10;
+                        // Update chart data to five datasets
+                        barChart2.data.datasets.forEach((dataset, index) => {
+                            dataset.data = [datasetData[index]];
+                        });
+                        barChart2.data.labels = ["KPI"];
 
-                        // Update the chart
+                        // Find highest value for dynamic scale adjustment
+                        const highestValue = Math.max(...datasetData);
+
+                        barChart2.options.scales.y.min = 0;
+                        barChart2.options.scales.y.max = highestValue + 5;
+
                         barChart2.update();
                     },
                     error: function (error) {
-                        console.error('Error fetching data:', error);
-                    }
+                        console.error("Error fetching data:", error);
+                    },
                 });
             }
 
