--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -324,7 +324,11 @@
 
                 <!-- calendar start -->
                 <div class="tab-pane fade mt-3" id="gantt-chart" role="tabpanel" aria-labelledby="gantt-chart-tab">
-                    <div id="calendar"></div>
+                    <div class="card border">
+                        <div class="card-body">
+                            <div id="calendar"></div>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- calendar end -->
