pagination for issue is alomost done

--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -210,7 +210,7 @@
 
                                 <hr>
 
-                                <div class="">
+                                <div class="row row-cols-2">
                                     <div class="">
                                         <div class="d-flex gap-2">
                                             <h4 class="text-primary">Deliverable List</h4>
@@ -222,11 +222,10 @@
                                         </div>
                                         <div
                                             id="project-detail-deliverable"
-                                            class="d-flex gap-2 flex-wrap gap-3"
+                                            class="row row-cols-2 gy-2"
                                         ></div>
                                     </div>
-                                    <hr>
-                                    <div class="mt-4">
+                                    <div class="">
                                         <div class="d-flex gap-2">
                                             <h4 class="text-primary">Architecture List</h4>
                                             <button type="button" class="mb-3 btn btn-primary" data-bs-toggle="modal" data-bs-target="#add-architecture-modal">
