--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -119,7 +119,6 @@
                         </button>
                     <!-- modal toggle button end -->
                     <!-- sortting button -->
-                        <i class="bi bi-sort-alpha-down sort-btn text-dark"></i>
 
                     </div>
                 </div>
@@ -213,18 +212,21 @@
 
                 <div class="tab-content pt-2">
 
-                    <div class="tab-pane fade show active row row-cols-1 p-2" id="all-issue-list">
-                        <div class="d-flex flex-column gap-2" id="sort-container"></div>
+                    <div class="tab-pane fade show active row row-cols-1 p-2 " style="position: relative;" id="all-issue-list">
+                        <div id="pagination-container"></div>
+                        <div class="d-flex flex-column gap-2 mt-2" id="sort-container"></div>
                         <div style="width: 100%; height:50vh" class="d-flex justify-content-center align-items-center d-none" id="no-result">
                             <div class="d-flex justify-content-center align-items-center flex-column">
                                 <i class="bi bi-journal-x text-white" style="font-size: 6rem;"></i>
                                 <h1 class="text-white">No Issue Found!</h1>
                             </div>
                         </div>
+                        
                     </div>
 
                     <div class="tab-pane fade show row row-cols-1" id="unsolved-issues">
-                        <div class="d-flex flex-column gap-2" id="unsolved-issues-container">
+                        <div id="pagination-unsolved-container"></div>
+                        <div class="d-flex flex-column gap-2 mt-2" id="unsolved-issues-container">
                             
                         </div>
                     </div>
@@ -730,7 +732,7 @@
 <link href="https://cdn.jsdelivr.net/npm/animate.css@3.7.2/animate.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.css" rel="stylesheet">
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.6.0/pagination.min.js" integrity="sha512-GzbaI5EsNzdEUq6/2XLYpr1y9CUZRIVsUeWTAFgULtQa5jZ3Nug8i0nZKM6jp9NffBCZhymPPQFcF0DK+JkRpw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script type="module" src="/js/issue.js"></script>
 
 
