--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -129,8 +129,8 @@
                 <form class="">
                     <input
                         class="form-control border-0"
-                        type="search"
                         placeholder="Search issue"
+                        id="search-issue"
                     />
                 </form>
             </div>
