--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -245,8 +245,8 @@
                         <form class="d-inline-block">
                             <input
                                 class="form-control border-0"
-                                type="search"
                                 placeholder="Search project "
+                                id="search-project"
                             />
                         </form>
                         <!-- modal toggle button start -->
