chnage how deliverable look in proeject overview

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -975,7 +975,7 @@
                             <div class="tab-pane fade p-3" id="edit-architecture">
                                 <div
                                     id="architectures-list-in-edit"
-                                    class="d-flex gap-2 flex-wrap"
+                                    class="d-flex gap-2 flex-wrap justify-content-center"
                                 ></div>
                             </div>
 
