--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -179,7 +179,7 @@
 
                 <div th:replace="~{fragments/navigation :: navigation-without-search}"></div>
 
-                <div class="toast-container position-fixed p-3 end-0 bottom-0 " id="toasts-noti-container" style="z-index: 99;">
+                <div class="toast-container position-fixed p-3 end-0 bottom-0 " id="toasts-noti-container" style="z-index: 99999999999;">
                     <!-- Then put toasts within -->
                     
                     
