not very important

--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -161,7 +161,8 @@
                                     <h4 class="card-title text-primary fw-bold fs-2">Project Details</h4>
                                 </div>
                                 <div class="">
-                                    <select name="" id="development-phase" class="form-control">
+                                    <small class="text-primary">Current Phase</small>
+                                    <select name="" id="development-phase" class="form-control ">
                                         <option value="PLANNING">PLANNING</option>
                                         <option value="DESIGN">DESIGN</option>
                                         <option value="CODING">CODING</option>
