--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -313,8 +313,8 @@
 
                         <div style="width: 100%; height:50vh" class="d-flex justify-content-center align-items-center d-none" id="no-result">
                             <div class="d-flex justify-content-center align-items-center flex-column">
-                                <i class="bi bi-journal-x text-white" style="font-size: 6rem;"></i>
-                                <h1 class="text-white">No Project Found!</h1>
+                                <i class="bi bi-journal-x text-dark" style="font-size: 6rem;"></i>
+                                <h1 class="text-dark">No Project Found!</h1>
                             </div>
                         </div>
                         <div id="pagination-container"  style="position: absolute; bottom:10px; left:42%;" ></div>
